# once_power

./: .gitignore  .metadata  OncePower.iss  README-EN.md  README.md  distribute_options.yaml  pubspec.yaml  version.json
.github/workflows/: build-linux.yml
android/app/: build.gradle  build.gradle.kts
assets/translations/: en-US.json  zh-CN.json
cpp/: CMakeLists.txt  example.cpp
doc/new/: README.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: global.dart  language.dart  main.dart  theme.dart
lib/config/: app.dart  config.dart  custom_theme.dart  global.dart  language.dart  theme.dart
lib/const/: color.dart  extension.dart  icons.dart  images.dart  input.dart  key.dart  l10n.dart  num.dart  text.dart
lib/constants/: colors.dart  constants.dart  ext.dart  icons.dart  images.dart  keys.dart  l10n.dart  num.dart  string.dart  text.dart
lib/core/: advance.dart  context_menu.dart  core.dart  date.dart  dialog.dart  file.dart  list.dart  menu.dart  mode.dart  move.dart  organize.dart  preset.dart  rename.dart  select.dart  sort.dart  update.dart  upload.dart
lib/cores/: advance.dart  context_menu.dart  csv.dart  (+25 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: base_info.rs  extension.rs  file_info.rs  file_meta.rs  file_type.rs  gps_info.rs  image_info.rs  img_exif.rs  log.rs  meta_info.rs  mod.rs  models.rs  simple.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+990 files in other folders)
