[package]
name = "rust_lib_once_power"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
kamadak-exif = "0.6.1"
rexif = "0.7.5"
trash = "5.2.3"
zhconv = "0.3.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

