[package]
name = "rust_lib_once_power"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
filetime_creation = "0.2.0"
flutter_rust_bridge = "=2.11.1"
rexif = "0.7.5"
trash = "5.2.3"
uuid = { version = "1.19.0", features = ["v4"] }
zhconv = "0.3.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
