[package]
name = "rust_lib_once_power"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4.5", features = ["clock"] }
dirs = "6.0.0"
exiftool-rs = "0.6.1"
filetime_creation = "0.2.0"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
imagesize = "0.14.0"
num_cpus = "1.17.0"
rayon = "1.12.0"
rexif = "0.7.5"
roxmltree = "0.21.1"
trash = "5.2.6"
uuid = { version = "1.23.3", features = ["v4"] }
zhconv = "0.4.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
